--- a/FE/src/index.html
+++ b/FE/src/index.html
@@ -58,10 +58,10 @@
 
 <div id="vex-splash-screen">
   <img
-    height="70"
-    width="70"
+    height="120"
+    width="120"
     loading="eager"
-    src="assets/img/logo/logo.svg" />
+    src="assets/img/icons/logos/logo_loading_blue.svg" />
   <div class="vex-splash-screen-loader"></div>
 </div>
 
